[gd_scene load_steps=20 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Font/Sharp Retro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/HARDLINERS Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Escenario/Bolsa2.png" type="Texture" id=5]
[ext_resource path="res://particulas/plomo.jpg" type="Texture" id=6]
[ext_resource path="res://botones/Opc.png" type="Texture" id=7]
[ext_resource path="res://Pausa.tscn" type="PackedScene" id=8]
[ext_resource path="res://particulas/saludd.png" type="Texture" id=9]
[ext_resource path="res://particulas/barra.png" type="Texture" id=10]
[ext_resource path="res://particulas/corazon.png" type="Texture" id=11]
[ext_resource path="res://Escenario/perder.jpg" type="Texture" id=12]
[ext_resource path="res://Escenario/ganaste.jpg" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 3
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 4
outline_color = Color( 0.12549, 0.580392, 0.258824, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 5
outline_color = Color( 0.219608, 0.0392157, 0.0392157, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 5
outline_color = Color( 0.243137, 0.576471, 0.560784, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 10
outline_color = Color( 0.117647, 0.427451, 0.14902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 25
outline_size = 3
outline_color = Color( 0.827451, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="tiempo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.5
margin_right = 50.5
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "000"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiempomensaje" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fondo" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.891
margin_top = 10.5514
margin_right = 125.109
margin_bottom = 113.552
rect_scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bolsas" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -114.909
margin_top = 2.87852
margin_right = -74.9088
margin_bottom = 70.8785
custom_fonts/font = SubResource( 7 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imgbolsa" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -58.3477
margin_top = 16.5807
margin_right = 236.652
margin_bottom = 415.581
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 7.0
margin_top = 11.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI"]

[node name="vida" type="HBoxContainer" parent="UI"]
margin_right = 1017.0
margin_bottom = 60.0

[node name="barra" type="HBoxContainer" parent="UI/vida"]
margin_right = 380.0
margin_bottom = 60.0

[node name="contad" type="MarginContainer" parent="UI/vida/barra"]
margin_right = 120.0
margin_bottom = 60.0

[node name="fondo" type="NinePatchRect" parent="UI/vida/barra/contad"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
texture = ExtResource( 6 )

[node name="titulo" type="TextureRect" parent="UI/vida/barra/contad/fondo"]
margin_left = 10.042
margin_top = 8.7815
margin_right = 300.042
margin_bottom = 286.781
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numero" type="Label" parent="UI/vida/barra/contad/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = -7.0
custom_fonts/font = SubResource( 8 )
text = "000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medidor" type="TextureProgress" parent="UI/vida/barra"]
margin_left = 124.0
margin_right = 380.0
margin_bottom = 60.0
value = 50.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )

[node name="contador" type="HBoxContainer" parent="UI/vida"]
margin_left = 384.0
margin_right = 384.0
margin_bottom = 60.0

[node name="Pausa" parent="." instance=ExtResource( 8 )]
pause_mode = 2
visible = false

[node name="opciones" type="TextureButton" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.6387
margin_top = -86.6907
margin_right = 159.361
margin_bottom = 163.309
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="perdida" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ganast" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -78.5
margin_right = 287.0
margin_bottom = 78.5
custom_fonts/font = SubResource( 4 )
text = "Perdiste¡¡"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Button" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.9755
margin_top = -83.9509
margin_right = 83.0245
margin_bottom = -12.9509
custom_fonts/font = SubResource( 5 )
text = "SALIR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reiniciar" type="Button" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -134.817
margin_top = -169.656
margin_right = 128.683
margin_bottom = -90.6559
custom_fonts/font = SubResource( 6 )
text = "REINICIAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="condicion" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -163.949
margin_top = 65.6176
margin_right = 168.051
margin_bottom = 146.618
custom_fonts/font = SubResource( 9 )
text = "Recoge las bolsas antes
que el contador llegue a
1000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="tiempomensaje" to="." method="_on_tiempomensaje_timeout"]
[connection signal="pressed" from="opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed"]
